Changes in @NEW@:
  o Client Changes:
    * Erases of critical troves is no longer considered a reason to restart
      conary.
    * You can now delete troves, update from changesets, and update with a
      full version specified without an installLabelPath set. (CNY-281)
    * The "conary rm" command has been added as an alias for the
      "conary remove" command. (CNY-952)

  o Build (cvc) Changes:
    * When building a group, if you turn the last byDefault True component
      to byDefault False, for a package, that will turn the package itself
      byDefault False.  This avoids installing empty shells of packages
      on the system. (CNY-774)

  o Bug Fixes:
    * Fixed a bug triggered when a critical update of a trove depended on 
      an erase.
    * A bug that caused changesets to be invalidated from the
      changeset cache when signatures were not modified by
      setTroveSigs() has been fixed.
    * A bug that caused an Internal Server Error (ISE) when attempting
      to browse the files in a shadowed component via the Conary
      repository browser has been fixed. (CNY-926)
    * A bug introduced 1.0.32 that affected the ability to update two troves
      due to the same broken dependency with resolveLevel 2 has been fixed.
      This bug affected the ability to simply run "conary update conary" when 
      conary-build and conary-repository will both installed. (CNY-949)
    * Conary will now display config lines that are equivalent to the default
      configuration value but are set explicitly by the user. (CNY-959)

Changes in 1.0.33:
  o Client Changes:
    * The "cvc" and "conary" command line programs have new command
      line argument aliases.  They accept "-r" as an alias for
      "--root" and "-c" as an alias for "--config".  Commands that
      accept "--info" now accept "-i" as an alias.
    * Contexts can now override any configuration option. (CNY-812)
    * The meaning of the "--components" command line option has